# radiopad

./: .editorconfig  .env.example  .gap_areas.json  .gap_clean.json  .gap_inventory.md  .gap_synthesis.md  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.legacy.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  COPILOT_OMO_RALPH_GLOBAL_SETUP.legacy.md  GEMINI.md  IMPLEMENTATION_NOTES.md  LICENSE.md  PRD.md  PROGRESS.md  QUICKSTART.legacy.md  README.legacy.md  README.md  README.zh-CN.legacy.md  ROADMAP.md  RadioPad — Enterprise PRD _ Project Requirement Detail Document.md  RadioPad_Dictation_Engine_ClaudeCode_Brief.md  RadioPad_Enterprise_PRD_v2 (1).md  RadioPad_Enterprise_PRD_v3.0.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  iter31-C.md  iter32-build.cmd  iter32-fulltest.cmd  iter32-rp.cmd  iter32-test.cmd  iter32_build.ps1  (+9 more)
.claude/: launch.json  settings.json
.design-sync/: NOTES.md  config.json  conventions.md
.github/: copilot-instructions.legacy.md  copilot-instructions.md  pull_request_template.md
app/: layout.tsx
content/: build-library.mjs  exam-catalog.json  lint-library.mjs
daemon/: agents.js  server.js
deploy/: Caddyfile.prod  Dockerfile.api  docker-compose.prod.yml  docker-compose.yml
desktop/: INSTALLER_HARDENING.md  PLUGIN_TRUST.md  README.md  UPDATE_SIGNING.md  whisper.md
desktop/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  macos-plugin-sandbox.sb  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend_health.rs  copilot_cli.rs  crypto_keyring.rs  device_pairing.rs  hotkeys.rs  local_cache.rs  log_redactor.rs  main.rs  offline_drafts.rs  pacs_plugins.rs  sandbox.rs  sidecar_manager.rs
docs/: HANDOFF-companion-dictation.md  HANDOFF-desktop-first-surface-split.md  INDEX.legacy.md  INDEX.md  agent-adapters.md
frontend/: CLAUDE.md  build.err  build.out  eslint.config.mjs  middleware.ts  next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.design-sync.json  tsconfig.json  typecheck.err  vitest.config.ts
hooks/: PostToolUse.sh  PreToolUse.sh  README.md  SessionStart.sh  Stop.sh  SubagentStop.sh  designlock.mjs  dotnet-format.mjs  lib.mjs  lib.ps1  posttooluse.mjs  posttooluse.ps1  pretooluse.mjs  pretooluse.ps1  release-reminder.mjs  session-start.mjs  session-start.ps1  stop.mjs  stop.ps1  subagent-stop.mjs  subagent-stop.ps1  test-pretooluse.mjs  test-pretooluse.ps1
marketing/: .gitignore  BRAND-LOCK.md  README.md  astro.config.mjs  package.json
mcp-connectors/: dicomweb-qido.json  dicomweb-qido.json.sig  fhir-servicerequest.json  fhir-servicerequest.json.sig  pacs-recent-studies.json  pacs-recent-studies.json.sig
mobile/: README.md  capacitor.config.ts  package.json
openapi/: openapi.yaml
perf/: README.md
plugins/: README.md
rulebooks/: abdomen_ct_v1.yaml  abdomen_us_v1.yaml  brain_mri_v1.yaml  cardiac_mri_v1.yaml  chest_ct_v1.yaml  chest_xray_v1.yaml  ct_abdomen_and_pelvis_rp_v1.yaml  ct_abdominal_aorta_rp_v1.yaml  ct_adrenals_rp_v1.yaml  ct_carotid_arteries_rp_v1.yaml  ct_cervical_spine_rp_v1.yaml  ct_coronary_arteries_rp_v1.yaml  ct_facial_bones_rp_v1.yaml  ct_foot_rp_v1.yaml  ct_hip_rp_v1.yaml  ct_intracranial_arteries_rp_v1.yaml  ct_kidneys_rp_v1.yaml  ct_knee_rp_v1.yaml  ct_kub_rp_v1.yaml  ct_lumbar_spine_rp_v1.yaml  ct_neck_rp_v1.yaml  ct_orbits_rp_v1.yaml  ct_pancreas_rp_v1.yaml  ct_paranasal_sinuses_rp_v1.yaml  ct_peripheral_runoff_rp_v1.yaml  ct_pulmonary_arteries_rp_v1.yaml  ct_shoulder_rp_v1.yaml  ct_small_bowel_rp_v1.yaml  ct_temporal_bones_rp_v1.yaml  ct_thoracic_aorta_rp_v1.yaml  ct_thoracic_spine_rp_v1.yaml  ct_urinary_tract_rp_v1.yaml  ct_whole_body_rp_v1.yaml  ct_wrist_rp_v1.yaml  fl_abdomen_rp_v1.yaml  fl_female_pelvis_rp_v1.yaml  fl_urinary_tract_rp_v1.yaml  head_ct_trauma_v1.yaml  knee_mri_v1.yaml  liver_lirads_v1.yaml  (+74 more)
(+1584 files in other folders)
